--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -1,10 +1,23 @@
 {% extends "expert/layouts/base_layout.html" %}
 
-{% block title %}<title>پروژه ها</title>{% endblock %}
+{% block title %}پروژه ها{% endblock %}
 
 {% block initial_information %}
-    {% include 'expert/layouts/initial_information.html' %}
+{#    {% include 'expert/layouts/initial_information.html' %}#}
 {% endblock %}
-{% block blur %}blur-div{% endblock %}
 
 {% block name %}رضا باسره{% endblock %}
+
+{% block dialog %}
+    {% include 'expert/layouts/showProject.html' %}
+{% endblock %}
+
+{% block content %}
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card info-card">
+                {% include 'expert/layouts/projectList.html' %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
