--- a/templates/registration/user_pass.html
+++ b/templates/registration/user_pass.html
@@ -14,22 +14,25 @@
 <div class="card">
     <img src="{% static 'img/logo.png' %}" alt="ChamranLogo">
     <p class="ChamranTeam">چمران تیم</p>
-    <div class="username">
-        <label for="username">نام کاربری</label>
-        <input type="text" id="username" name="username" value="">
-        <i class="fas fa-user-alt fa-lg"></i>
-    </div>
-    <div class="password">
-        <label for="password">رمز عبور</label>
-        <input type="password" id="password" name="password" value="">
-        <i class="fas fa-lock fa-lg"></i>
-    </div>
-    <div class="confirm_password">
-        <label for="confirm_password">تایید رمز عبور</label>
-        <input type="password" id="confirm_password" name="confirm_password" value="">
-        <i class="fas fa-check fa-lg"></i>
-    </div>
-    <button type="button" name="enter" class="Enter-btn">ثبت اطلاعات</button>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="username">
+            <label for="username">نام کاربری</label>
+            <input type="text" id="username" name="username" value="">
+            <i class="fas fa-user-alt fa-lg"></i>
+        </div>
+        <div class="password">
+            <label for="password">رمز عبور</label>
+            <input type="password" id="password" name="password" value="">
+            <i class="fas fa-lock fa-lg"></i>
+        </div>
+        <div class="confirm_password">
+            <label for="confirm_password">تایید رمز عبور</label>
+            <input type="password" id="confirm_password" name="confirm_password" value="">
+            <i class="fas fa-check fa-lg"></i>
+        </div>
+        <button type="submit" name="enter" class="Enter-btn">ثبت اطلاعات</button>
+    </form>
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
