--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -37,13 +37,14 @@
     <div class="side-bar">
       <div class="topMargin"></div>
       <div class="expert-icon"></div>
-      <img src="{% static 'industry/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
+      
+      <img src="{{industry.industryform.photo}}" alt="profile" class="profile" width="150px" height="150px">
       <h5>{% block name %}{% endblock %}</h5>
       <h6>صنعت</h6>
-      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
+      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ industry.industry_points|default:0 }}</span>/100</p>
       <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0" aria-valuemax="100" style="width: 70px">
-          <span class="sr-only">{{ score|default:0 }}% completed</span>
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{ industry.industry_points|default:0 }}" aria-valuemin="0" aria-valuemax="100" style="width: 70px">
+          <span class="sr-only">{{ industry.industry_points|default:0 }}% completed</span>
         </div>
       </div>
       <div class="hr"></div>
